modified:   .vscode/launch.json 	modified:   .vscode/tasks.json 	modified:   src/Library/Greeter.cs 	new file:   src/Library/Singleton.cs 	modified:   src/Program/Program.cs 	modified:   test/LibraryTests/SingletonTests.cs

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -32,22 +32,8 @@
             "args": [
                 "watch",
                 "run",
-                "${workspaceFolder}/src/Program/Program.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "test",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "test",
-                "${workspaceFolder}/test/LibraryTests/LibraryTests.csproj",
-                "/p:CollectCoverage=true",
-                "/p:CoverletOutputFormat=lcov",
-                "/p:CoverletOutput=lcov.info"
+                "--project",
+                "${workspaceFolder}/src/Program/Program.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
